--- a/.editorconfig
+++ b/.editorconfig
@@ -14,6 +14,6 @@ trim_trailing_whitespace = true
 indent_size = 4
 trim_trailing_whitespace = false
 
-[*.{css,js}]
+[*.{css,js,yml}]
 indent_size = 2
 trim_trailing_whitespace = true
